[tool.poetry]
name = "twitter-opinion-backend"
version = "0.1.0"
description = ""
authors = ["Jeusto <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
textblob = "^0.15.3"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
